welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value dessineVInverse
dessineVInverse(c: Color) {
^PatternPicture:24: error: not found: value c
dessineVInverse(c: Color) {
                ^PatternPicture:25: error: not found: value c
  peindreSol(c)
             ^PatternPicture:39: error: not found: value dessineVInverse
  dessineVInverse(Color.BLUE)
  ^